--- a/README.adoc
+++ b/README.adoc
@@ -17,6 +17,7 @@ Refer to the following links for more information on Triggers, Rules and Feeds
 
 * Deploy https://github.com/infinispan/infinispan-openshift-templates[Infinispan on OpenShift]
 * Deploy https://github.com/kameshsampath/openwhisk-openshift#installing-on-minishift[OpenWhisk on Minishift]
+* http://couchdb.apache.org/[Apache CouchDB] will be used to persist the trigger data
 
 [IMPORTANT]
 ====
@@ -33,13 +34,28 @@ called `openwhisk`
 [[build-and-deploy]]
 == Build and Deploy
 
+=== Database
+
+As described in <<pre-req>> section this application uses http://couchdb.apache.org/[Apache CouchDB] to persist the
+provider trigger data. The following command shows how to deploy CouchDB:
+
+[code,sh]
+----
+oc apply -f couchdb/couchdb.yaml <1>
+----
+
+<1> Deploys CouchDB in OpenShift and sets up the CouchDB for Single Node Environment as said in http://docs.couchdb.org/en/2.1.1/install/setup.html#install-setup
+
+[NOTE]
+====
+OpenWhisk Deployment already has CouchDB deployed, if you wish to use it you can alter the
+**spring.couchbase.bootstrap-hosts** in link:./src/main/resources/application.yaml. Just for sake of
+clarity and to prevent any mess with OpenWhisk data its recommened to deploy seperate.
+====
+
+=== Application
+
 [code,sh]
 ----
 mvn clean package fabric8:deploy
 ----
-
-[IMPORTANT]
-====
-Whenever you update the code, as current trigger store is ephemeral, its
-ideal recreate the triggers to add it to the store
-====
